Fixed line 21, making the content box's box-shadow visible.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@ a {
 .content {
   background: white;
   border-radius: 8px;
-  /*box-shadow: 0 1px 3px 0 rgb(0 0 0 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);*/
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
   padding: 20px;
 }
 
